[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tokio-websockets = { version = "0.11.0", features = ["client", "server", "rand", "ring"] }
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.2.0"
nom = "7.1.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
